# flux

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.dev.md  README.md  SECURITY.md  TODO.md  extensions.txt  flux.toml  hello.ll  package.json  requirements.txt  specs.md  test_fix.fl  tsconfig.json
.cache/clangd/index/: ADL.h.B49C33CADF6EA3AB.idx  APFloat.h.C0055CDB18C38E83.idx  APInt.h.FF3E6BD395C82A0E.idx  APSInt.h.4C9D3B7FFA538B1C.idx  AST.h.ECC998A756F66C02.idx  ASTPrinter.cpp.F817E1C6FB1D21F9.idx  ASTVisitor.cpp.746747680A79A7D6.idx  ASTVisitor.h.3A36BCA95D805E0F.idx  AlignOf.h.A31B6AB5F7A63605.idx  Alignment.h.221A2C5791280189.idx  Allocator.h.B40BD81B3B8194E3.idx  AllocatorBase.h.D8F3D09216F55C83.idx  Analysis.h.0E4360D8BB7DCE4C.idx  Any.h.8BAD0498170FA907.idx  Argument.h.6558D8DC54268122.idx  ArrayRecycler.h.E2533995A8F69B9E.idx  ArrayRef.h.AF4DBB8AE65BC28E.idx  AsmParsers.def.5DEC607D6954CD3F.idx  AsmPrinters.def.D03D086F95C2AC5C.idx  Atomic.h.C423909DF6A973E4.idx  AtomicOrdering.h.EBF6527E35F58AEC.idx  Attributes.h.55E6F2E2D36D3A4D.idx  Attributes.inc.0CC984301657A320.idx  BasicBlock.h.0A191610A12FE678.idx  BitVector.h.7EBE92F169287FEF.idx  BitcodeWriter.h.F132213BC705914C.idx  Bitfields.h.811061DC769E58B6.idx  BitmaskEnum.h.A9F180D04EE8F074.idx  BranchProbability.h.DE62FFC89D759486.idx  CBindingWrapping.h.D3801B8F5ECE9CD9.idx  CFG.h.851E6543C994B8F2.idx  CFGDiff.h.882EFE3F99CB8A2A.idx  CFGUpdate.h.DB29EA4BC775B576.idx  CGPassBuilderOption.h.250052E8AF94CFEB.idx  CGSCCPassManager.h.CCDD7FCEDEAE4010.idx  CachedHashString.h.FE53E888E77621E4.idx  CallingConv.h.F5DB5AAFE0A89D45.idx  Casting.h.68221890DF28B158.idx  Chrono.h.2D7592669B751AA4.idx  CmpPredicate.h.2B96600A3E39B99F.idx  (+265 more)
.github/workflows/: ci.yml  nightly.yml  release.yml
built/FluxCompiler-0.1.0-win64/lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
cmake/: FluxCompilerOptions.cmake
docs/: index.md  package.json
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css  index.ts
docs/guide/: async.md  control-flow.md  error-handling.md  functions.md  installation.md  ownership.md  structs-enums.md  variables.md
editors/vscode/: flux-lang-0.1.0.vsix  language-configuration.json  package.json
editors/vscode/syntaxes/: flux.tmLanguage.json
examples/: hello.fl  hello.flux  ownership.fl  shapes.flux
include/flux/AST/: AST.h  ASTVisitor.h  Decl.h  Expr.h  Pattern.h  Stmt.h  Type.h
include/flux/CodeGen/: CodeGen.h  IREmitter.h  TypeMapper.h
include/flux/Common/: Diagnostics.h  SourceLocation.h
include/flux/Lexer/: Lexer.h  Token.h
include/flux/Parser/: Parser.h
include/flux/Sema/: NameResolution.h  Sema.h  TypeChecker.h
lib/AST/: ASTPrinter.cpp  ASTVisitor.cpp  CMakeLists.txt
lib/CodeGen/: CMakeLists.txt  CodeGen.cpp  IREmitter.cpp  TypeMapper.cpp
lib/Common/: CMakeLists.txt  Diagnostics.cpp  SourceLocation.cpp
lib/Lexer/: CMakeLists.txt  Lexer.cpp
lib/Parser/: CMakeLists.txt  Parser.cpp
lib/Sema/: CMakeLists.txt  NameResolution.cpp  Sema.cpp  TypeChecker.cpp
runtime/: CMakeLists.txt  flux_runtime.cpp  flux_runtime.h
scripts/: docker-test.sh  install.ps1  install.sh  version.sh
tests/: CMakeLists.txt
tests/fuzz/: CMakeLists.txt  LexerFuzzer.cpp
tests/lit/: lit.cfg.py
tests/lit/lexer/: basic_tokens.fl
tests/unit/: LexerTest.cpp  ParserTest.cpp  SemaTest.cpp
tools/flux/: CMakeLists.txt  flux.rc  main.cpp
